<resources>
    <string name="app_short_name">Garbage Schedule</string>
    <string name="app_name">Milwaukee Garbage Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Navigation Menu -->
    <string name="nav_settings">Settings</string>
    <string name="nav_request">Request Service / Parking</string>
    <string name="nav_alerts">Email/Text Alerts</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Contribute</string>
    <string name="nav_more">More Options</string>
    <string name="nav_share">Share</string>
    <string name="nav_review">Review</string>
    <string name="nav_recycling">Recycling Resources</string>

    <!-- MainActivity Strings -->
    <string name="next_pickup">Next Pickup</string>
    <string name="updated">Updated:</string>
    <string name="preferences">Preferences</string>
    <string name="no_address">Welcome! \n\nPlease open settings to set your address.</string>
    <string name="no_address_review">Or… please add a review if you don\'t like this app!</string>
    <string name="open_settings">Open Settings</string>

    <!-- Settings Activity -->
    <string name="pref_header_address">Address Settings</string>
    <string name="pref_key_houseNumber">pref_key_houseNumber</string>
    <string name="pref_key_street">pref_key_street</string>
    <string name="pref_key_directional">pref_key_directional</string>
    <string name="pref_key_suffix">pref_key_suffix</string>
    <string name="title_activity_app_settings">Settings</string>

    <!-- About Activity -->
    <string name="title_about">About</string>
    <string name="about">
        <![CDATA[
        <h3>About</h3>
        <p>
        My name is Jason… I live in Milwaukee and I like knowing my garbage pick-up schedule. This app is ad-free and fee-free; I just wanted to make it and share it.
        </p>
        <p>
        <a href="http://www.jasoncapriotti.com/garbage">Go here</a> if you love this app and want to give a little, or if you just want to learn more.
        </p>
        <h3>Disclaimer</h3>
        <p>
        The information displayed in this application comes directly from the official City of Milwaukee web site*. That is, the application’s information is only as reliable as their information. Causes for incorrect information may be due to:
        <li>Incorrect information provided by the city web site*</li>
        <li>The city web site not being accessible.</li>
        <li>The web site changing, thus “breaking” the manner in which this application uses the web site.</li>
        <li>Other changes beyond the control of this application.</li>
        </p>
        <p>
            The City of Milwaukee’s “Web &amp; Email Policies” as of August 2016 states:
            <blockquote>
            <i>The City of Milwaukee is committed to proactively publish data in a structured standardized machine readable format to improve provision of services, increase transparency and access to public information, and enhance coordination and efficiency among departments, partner organizations and citizens.</i>
            </blockquote>
        </p>
        <p>
        The information retrieved and viewed within this application is intended to improve consumption of public information, and thus meets these policies.
        </p>
        <p>
        * - The application currently uses this page for retrieving information: <a href="http://city.milwaukee.gov/mpw/divisions/operations/environmental/sanitation/GarbageRecyclingSchedules.htm">http://city.milwaukee.gov/mpw/divisions/operations/environmental/sanitation/GarbageRecyclingSchedules.htm</a>
        </p>
        <h3>Copyright Information</h3>
        <h4>Milwaukee Image</h4>
        <p>The image of Milwaukee has the following attribution: By Wantonlife (Own work) [CC BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0) or GFDL (http://www.gnu.org/copyleft/fdl.html)], via Wikimedia Commons</p>
        <p>The source page is: https://commons.wikimedia.org/wiki/File%%3AMke-collage.jpg</p>
        <p>It was cropped such that only the top image in the collage is shown</p>
        <h4>Dumpster Icon</h4>
        <p>Icon made by <a href="https://www.flaticon.com/authors/nikita-golubev">Nikita Golubev</a> from <a href="https://www.flaticon.com">www.flaticon.com</a>
        <h4>Recycle Icon</h4>
        <p>Icon made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/">CC 3.0 BY</a></p>
        <p>Version: %s</p>
        ]]>
    </string>
    <string name="reset_settings">Reset Settings</string>
    <string name="reset_dialog_title">Reset?</string>
    <string name="reset_dialog_message">Are you sure you want to clear the settings for this application?</string>

    <!-- Donate Activity -->
    <string name="title_donate">Contribute</string>
    <string name="donate_info">I made this app for fun, and don\'t want to ruin it by charging for it or cluttering it with ads. If you like this free app, consider optionally paying for it.\n\nName your price!</string>
    <string name="donate_alert">Purchases are currently unavailable (%s)</string>
    <string name="donate_button">Submit</string>
    <string name="donate_thankyou_title">Thank You!</string>
    <string name="donate_thankyou_message">Thank you very much for your contribution; I appreciate it!</string>
    <!-- Premium -->
    <string name="add_features">I am considering adding a feature to allow tracking multiple addresses. This goes beyond my needs, so it will be a premium feature. If this feature interests you, consider buying the premium version now. This is like a "kickstarter"… if I receive enough purchases, I will add the feature and you\'ll be able to use it.</string>

    <!-- Request Service -->
    <string name="title_request">Request Service</string>
    <string name="request_service_text1">Milwaukee DPW has an online service request form that allows service requests for missed garbage/recycling collection, missing/damaged carts, special collection, street sweeping, etc.</string>
    <string name="request_service_text2">The links to make a service request are below. <strong>All requests go through the DPW web site!</strong></string>
    <string name="request_garbage"><a href="http://itmdapps.milwaukee.gov/XY_ESR/ReportProblem.jsp?catId=1">Garbage &amp; Recycling</a></string>
    <string name="request_street_maintenance"><a href="http://itmdapps.milwaukee.gov/XY_ESR/ReportProblem.jsp?catId=5">Street Maintenance</a></string>
    <string name="request_snow"><a href="http://itmdapps.milwaukee.gov/XY_ESR/ReportProblem.jsp?catId=3">Snow and Ice</a></string>
    <string name="request_parking"><a href="http://city.milwaukee.gov/mpw/divisions/administrative/parking/Parking-Permit-Anchors/Temporary-Overnight-Parking-Permission.htm">Overnight Parking Request</a></string>

    <!-- Alerts -->
    <string name="title_alert">Alerts</string>
    <string name="alert_text">
        The City of Milwaukee can send text notifications with the following information:\n
        \n
        \u2022 Garbage and recycling pickup\n
        \u2022 Parking restrictions during snow events\n
        \u2022 Street sweeping\n
        \u2022 Amber alerts\n
        \u2022 Aldermanic news\n
        \n
        Additionally, you can sign up for email notification of crime activity in your neighborhoods, or in any area of Milwaukee.
        They include crime categories such as aggravated assault, robbery, burglary, vehicle theft, theft, arson, criminal damage to property and locked vehicle entry.
    </string>
    <string name="alert_link">
        See this page for more details: \n
        <a href="http://city.milwaukee.gov/enotify">http://city.milwaukee.gov/enotify</a>
    </string>

    <!-- New Version Popup -->
    <string name="new_version_title">
        New Version Information
    </string>
    <string name="new_version_details">
        Thanks for installing! The latest changes include:\n
        \n
        \u2022 Information about local recycling\n
        \u2022 Updated About screen\n
        \u2022 Updates to support the latest versions of Android\n
        \n
        I like that you are using this app; please consider reviewing or sharing this app with others!
    </string>

</resources>
