<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@id/nav_request"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/nav_request" />
        <item
            android:id="@id/nav_alerts"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/nav_alerts" />
        <item
            android:id="@id/nav_about"
            android:icon="@drawable/information_outline"
            android:title="@string/nav_about" />
        <item
            android:id="@id/nav_donate"
            android:icon="@drawable/ic_action_emo_cool"
            android:title="@string/nav_donate" />
    </group>
</menu>
