<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:title="House Number"
        android:key="@string/pref_key_houseNumber"
        android:defaultValue=""
        android:summary="Please provide your house number (e.g. 1025)"/>

    <ListPreference android:title="Directional"
        android:key="@string/pref_key_directional"
        android:defaultValue=""
        android:summary="Select your street directional (e.g. North)"
        android:entries="@array/directionalNames"
        android:entryValues="@array/directionalValues" />

    <ListPreference android:title="Street"
        android:key="@string/pref_key_street"
        android:defaultValue=""
        android:summary="Select your street name"
        android:entries="@array/streetValues"
        android:entryValues="@array/streetValues" />

    <ListPreference android:title="Suffix"
        android:key="@string/pref_key_suffix"
        android:defaultValue=""
        android:summary="Select your street suffix (e.g. Ave)"
        android:entries="@array/suffixNames"
        android:entryValues="@array/suffixValues" />

</PreferenceScreen>