<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcap.milwaukeedpw.RequestServiceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_service_text1"
        android:layout_marginBottom="@dimen/fab_margin"
        android:id="@+id/request_text1">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_service_text2"
        android:layout_marginBottom="@dimen/fab_margin"
        android:id="@+id/request_text2"
        android:layout_below="@+id/request_text1">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_garbage"
        android:id="@+id/request_garbage"
        android:layout_below="@+id/request_text2">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_street_maintenance"
        android:id="@+id/request_street"
        android:layout_below="@+id/request_garbage">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_snow"
        android:id="@+id/request_snow"
        android:layout_below="@+id/request_street">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/request_parking"
        android:id="@+id/request_parking"
        android:layout_below="@+id/request_snow"
        android:paddingTop="12dp">
    </TextView>


</RelativeLayout>
